[package]
name = "fount"
version = "0.1.0"
authors = ["Chad Brokaw <cbrokaw@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
swash = { git = "https://github.com/dfrg/swash" }
peniko = { git = "https://github.com/linebender/peniko", rev = "cafdac9a211a0fb2fec5656bd663d1ac770bcc81" }
